--- a/src/components/Clock/style.module.css
+++ b/src/components/Clock/style.module.css
@@ -1,38 +1,47 @@
+.clockDiv {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 80vh;
+}
+
 .clock {
   width: 300px;
   height: 300px;
-  border: 10px solid black;
   border-radius: 50%;
   position: relative;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .hand {
-  width: 50%;
-  height: 6px;
-  background: black;
   position: absolute;
-  top: 50%;
-  transform-origin: 100%;
-  transform: rotate(0deg);
-  transition: transform 0.05s ease-in-out;
+  background: black;
+  border-radius: 10px;
+  transform-origin: bottom;
 }
 
 .hour {
-  height: 8px;
-  width: 40%;
-  background: red;
+  width: 1.8%;
+  height: 25%;
+  top: 25%;
+  left: 48.85%;
+  opacity: 0.8;
 }
 
 .minute {
-  height: 6px;
-  width: 45%;
-  background: green;
+  width: 1.6%;
+  height: 30%;
+  top: 19%;
+  left: 48.9%;
+  opacity: 0.8;
 }
 
 .second {
-  height: 4px;
-  width: 50%;
-  background: blue;
+  width: 1%;
+  height: 40%;
+  top: 9%;
+  left: 49.25%;
+  opacity: 0.8;
 }
 
 .controls {
