--- a/src/components/SignUp/style.module.css
+++ b/src/components/SignUp/style.module.css
@@ -48,8 +48,8 @@ body {
   cursor: pointer;
   font-size: 20px;
   position: absolute;
-  right: 10px;
-  top: 69%;
+  right:0;
+  top: 55%;
 }
 
 .signupDiv .signInOptionDiv {
